# DeathDPI-Windows

./: LICENSE  README.md  SETUP.md
DeathDPI-Windows/: CMakeLists.txt  dub.json
DeathDPI-Windows/src/: windivert.d
src/: app.d  config.d
